# just_recipe

./: .env  Cargo.toml  Dockerfile  README.md  how_to_test.txt
api/: .env  Cargo.toml  Dockerfile  docker_build_command.txt
api/migrations/: 20240423084457_make_ingredients_unique.sql  20240423084908_add_recipe_table.sql  20240423121334_alter_unit.sql  20240508052344_alter_step_table.sql  20240513200558_alter_recipe_description.sql  20240514081930_recipe_ingredient_not_null.sql  20240514082719_recipe_ingredient_full_not_null.sql  20240514090053_recipe_steps_not_null.sql  20240529210310_alter_step_table_primary_jey.sql
api/src/: lib.rs  main.rs
client/: IngredientsProvier.tsx  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  GlobalContext.tsx  IngredientsProvider.jsx  IngredientsProvier.tsx  UnitsProvider.tsx  app.jsx  baseUrl.ts  index.css  index.tsx  interfaces.ts  routes.js  routes.ts  store.js  store.ts
migrations/: 20240423082802_add_ingredient_table.sql  20240423084457_make_ingredients_unique.sql  20240423103157_add_recipe_ingredient.sql  20240423103337_add_unit.sql  20240423121334_alter_unit.sql  20240426182938_add_step_table.sql
scripts/: init_db.ps1
src/: app.rs  lib.rs  main.rs  utils.rs
src/application/: app.rs  error.rs  mod.rs  state.rs
src/ingredient/: helpers.rs  mod.rs
src/recipe/: helpers.rs  mod.rs  recipe.rs  recipe_ingredient.rs  recipe_step.rs
src/routes/: ingredients.rs  (+3 more)
tests/: app.rs  health_check.rs  ingredients.rs  recipes.rs  tests.rs  units.rs  utils.rs
(+95 files in other folders)
