[package]
name = "just_recipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
itertools = "0.12.1"
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "tls-native-tls", "migrate"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

# For more optimized SQLX queries
[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
fake = {version = "2.9.2"}
